<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".UI.MainActivity">

    <Button
        android:id="@+id/addChild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp"
        android:onClick="onClick"
        android:text="@string/add_child"/>

    <Button
        android:id="@+id/editChild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addChild"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:onClick="onClick"
        android:text="@string/edit_child"/>

    <Button
        android:id="@+id/viewSurvey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editChild"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:onClick="onClick"
        android:text="@string/survey"/>

    <Button
        android:id="@+id/viewReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewSurvey"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:onClick="onClick"
        android:text="@string/view_report"/>


</RelativeLayout>
