<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="36dp"
                  android:orientation="horizontal"
                  android:weightSum="2">

        <TextView
            android:id="@+id/bedtime_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/es_bedtime"/>


        <EditText
            android:id="@+id/bedtime_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="true"
            android:gravity="top"/>

    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="36dp"
                  android:orientation="horizontal"
                  android:weightSum="2">

        <TextView
            android:id="@+id/wakeuptime_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/es_waketime"/>


        <EditText
            android:id="@+id/wakeuptime_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="true"
            android:gravity="top"/>

    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="36dp"
                  android:orientation="horizontal"
                  android:weightSum="2">

        <TextView
            android:id="@+id/screentime_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/es_screentime"/>


        <EditText
            android:id="@+id/screentime_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="true"
            android:gravity="top"/>

    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="36dp"
                  android:orientation="horizontal"
                  android:weightSum="2">

        <TextView
            android:id="@+id/familytime_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/es_familytime"/>


        <EditText
            android:id="@+id/familytime_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="true"
            android:gravity="top"/>


    </LinearLayout>

    <TableRow
        android:id="@+id/hr"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="36dp"
        android:background="#444"></TableRow>

</LinearLayout>
